replace vital with summary

--- a/docs/wearables/providers/test_data.mdx
+++ b/docs/wearables/providers/test_data.mdx
@@ -86,11 +86,11 @@ where the number of days data backfilled varies according to the provider. [Hist
 ## Data Format
 
 When connecting to the live Vital client, there are three data response structures available for data. 
-Raw, Stream and Vital
+Raw, Stream and Summary
 
-When connecting to the demo Vital client data is only available in the Vital structure.
+When connecting to the demo Vital client data is only available in the Summary structure.
 
-Vital restructures provider data fields, to have a consistent response structure across all providers. 
+Summary restructures provider data fields, to have a consistent response structure across all providers. 
 This is the easiest way to use provider data across an application which connects to multiple providers.
 
 
