--- a/docs/wearables/providers/test_data.mdx
+++ b/docs/wearables/providers/test_data.mdx
@@ -81,7 +81,7 @@ From here, everything works exactly the same as if you connected a real device. 
 ## Backfill Data
 
 For demo connections there will be 30 days of historic data backfilled. This is in contrast with data backfill for non demo providers, 
-where the number of days data backfilled varies according to the provider. [Historical backfill](/wearables/providers/introduction#historical-days-retrieved)
+where the number of days data backfilled varies according to the provider. You can find out more [here](/wearables/providers/introduction#historical-days-retrieved)
 
 ## Data Format
 
