--- a/docs/wearables/sdks/ios.mdx
+++ b/docs/wearables/sdks/ios.mdx
@@ -454,43 +454,43 @@ As of version `0.4.6` we are syncing the following types:
 
 ```swift
 /// Activity
-HKSampleType.quantityType(forIdentifier: .stepCount)!,
-HKSampleType.quantityType(forIdentifier: .activeEnergyBurned)!,
-HKSampleType.quantityType(forIdentifier: .basalEnergyBurned)!,
-HKSampleType.quantityType(forIdentifier: .flightsClimbed)!,
-HKSampleType.quantityType(forIdentifier: .distanceWalkingRunning)!,
-HKSampleType.quantityType(forIdentifier: .vo2Max)!,
-HKSampleType.quantityType(forIdentifier: .bodyMass)!,
+HKSampleType.quantityType(forIdentifier: .stepCount)!
+HKSampleType.quantityType(forIdentifier: .activeEnergyBurned)!
+HKSampleType.quantityType(forIdentifier: .basalEnergyBurned)!
+HKSampleType.quantityType(forIdentifier: .flightsClimbed)!
+HKSampleType.quantityType(forIdentifier: .distanceWalkingRunning)!
+HKSampleType.quantityType(forIdentifier: .vo2Max)!
 
 /// Body
-HKSampleType.quantityType(forIdentifier: .bodyFatPercentage)!,
-HKQuantityType.quantityType(forIdentifier: .height)!,
+HKSampleType.quantityType(forIdentifier: .bodyFatPercentage)!
+HKSampleType.quantityType(forIdentifier: .bodyMass)!
 
 /// Profile
-HKCharacteristicType.characteristicType(forIdentifier: .biologicalSex)!,
-HKCharacteristicType.characteristicType(forIdentifier: .dateOfBirth)!,
+HKCharacteristicType.characteristicType(forIdentifier: .biologicalSex)!
+HKCharacteristicType.characteristicType(forIdentifier: .dateOfBirth)!
+HKQuantityType.quantityType(forIdentifier: .height)!
 
 /// Sleep
-HKSampleType.categoryType(forIdentifier: .sleepAnalysis)!,
-HKSampleType.quantityType(forIdentifier: .heartRate)!,
-HKSampleType.quantityType(forIdentifier: .heartRateVariabilitySDNN)!,
-HKSampleType.quantityType(forIdentifier: .oxygenSaturation)!,
-HKSampleType.quantityType(forIdentifier: .restingHeartRate)!,
+HKSampleType.categoryType(forIdentifier: .sleepAnalysis)!
+HKSampleType.quantityType(forIdentifier: .heartRate)!
+HKSampleType.quantityType(forIdentifier: .heartRateVariabilitySDNN)!
+HKSampleType.quantityType(forIdentifier: .oxygenSaturation)!
+HKSampleType.quantityType(forIdentifier: .restingHeartRate)!
 HKSampleType.quantityType(forIdentifier: .respiratoryRate)!
 
 /// Workout
 HKSampleType.workoutType(),
 HKSampleType.quantityType(forIdentifier: .respiratoryRate)!
-HKSampleType.quantityType(forIdentifier: .heartRate)!,
+HKSampleType.quantityType(forIdentifier: .heartRate)!
 
 /// Vitals(Heartrate)
-HKSampleType.quantityType(forIdentifier: .heartRate)!,
+HKSampleType.quantityType(forIdentifier: .heartRate)!
 
 /// Vitals(glucose)
 HKSampleType.quantityType(forIdentifier: .bloodGlucose)!
 
 /// Vitals(blood pressure)
-HKSampleType.quantityType(forIdentifier: .bloodPressureSystolic)!,
+HKSampleType.quantityType(forIdentifier: .bloodPressureSystolic)!
 HKSampleType.quantityType(forIdentifier: .bloodPressureDiastolic)!
 ```
 
