--- a/docs/wearables/sdks/ios.mdx
+++ b/docs/wearables/sdks/ios.mdx
@@ -426,7 +426,7 @@ This means that although we have background delivery's frequency set to `.hourly
 
 ### 3. Miscellaneous Information
 
-#### SDK configuration flow
+#### i) SDK configuration flow
 
 Vital's iOS SDK allows you to configure it in any order you wish. There are however two things to keep in mind:
 
@@ -435,7 +435,7 @@ Vital's iOS SDK allows you to configure it in any order you wish. There are howe
 
 From an implementation perspective, `VitalHealthKitClient` suspends all operations until both `VitalClient.configure` and `VitalClient.setUserId` are called. This means that it's safe to configure `VitalHealthKitClient` before the `VitalClient`.
 
-#### VitalHealthKit configuration
+#### ii) VitalHealthKit configuration
 
 The `VitalHealthKitClient` can be configured with the following options:
 
@@ -444,11 +444,11 @@ The `VitalHealthKitClient` can be configured with the following options:
 - `logsEnabled`: Whether or not to enable logs. Useful when debugging. By default, this is `false`.
 - `numberOfDaysToBackFill`: Number of days to fetch data for. The first you configure the SDK, we will get X days of amount of data for the permissions you requested. By default, this is `90`.
 
-#### `sync` versus background delivery
+#### iii) `sync` versus background delivery
 
 If you are using background delivery, you don't need to call `VitalHealthKit.shared.sync`. When you call `VitalHealthKit.configure` with `backgroundDeliveryEnabled: true`, the SDK will automatically sync data. Afterwards, it will periodically sync data when it's available. You should call `VitalHealthKit.shared.sync` if you are confident that there's new data available (e.g. your app is writting to HealthKit) and you want to sync immediately.
 
-#### App with existing HealthKit permissions
+#### iv) App with existing HealthKit permissions
 
 As of version `0.4.6` we are syncing the following types:
 
@@ -499,9 +499,9 @@ If your app already asked for one, or more, of these permissions, we will try to
 1. For example, if the user gave permission for steps, we will try sync steps as part of an Activity. This means that this data is available via `/summary/activity/` endpoint.
 2. Types part of `Vitals` (e.g. `heartrate`, `bloodGlucose`), are treated as timeseries data, so they are available via the timeseries API: `/timeseries/`.
 
-#### Information flow
+#### v) Information flow
 
-For the majority of users, the SDK is configured with background delivery to `true`. Data is synced on their behalf and they don't need to think about it. Eventually, to display the information back to their users, they make an HTTP request to a server. This means that information flows looks like this:
+For most people, the SDK is configured with background delivery to `true`. Data is synced on their behalf and they don't need to think about it. Eventually, to display the information back to a user, they make an HTTP request to a server. This means that information flows looks like this:
 
 ```
 Apple HealthKit -> SDK -> Vital Server -> Your Server <- User's app
