--- a/docs/wearables/vital-app/introduction.mdx
+++ b/docs/wearables/vital-app/introduction.mdx
@@ -1,13 +1,18 @@
 ---
-title: "Introduction to Vital iOS App"
+title: "Introduction"
 ---
+
+<Info>
+  The app is available on the App Store, and you can download it
+  [here](https://apps.apple.com/us/app/vital-connect/6444167196).
+</Info>
 
 The Vital iOS app allows your customers to quickly sync their Apple Health app with you. This is quite handy if you don't have an iOS app, but you still want to analyse the data stored in the Apple Health app.
 
-<info>
-  The app is available on the App Store, and you can download it
-  [here](https://apps.apple.com/us/app/vital-connect/6444167196).
-</info>
+<p float="middle">
+  <img src="/img/activity_small.png" width={"60%"} />{" "}
+  <img src="/img/sleep_small.png" width={"60%"} />{" "}
+</p>
 
 ## How does it work?
 
