--- a/docs/wearables/vital-app/introduction.mdx
+++ b/docs/wearables/vital-app/introduction.mdx
@@ -9,10 +9,8 @@ title: "Introduction"
 
 The Vital iOS app allows your customers to quickly sync their Apple Health app with you. This is quite handy if you don't have an iOS app, but you still want to analyse the data stored in the Apple Health app.
 
-<p float="middle">
-  <img src="/img/activity_small.png" width={"60%"} />{" "}
-  <img src="/img/sleep_small.png" width={"60%"} />{" "}
-</p>
+<img src="/img/activity_small.png" width={"60%"} />
+<img src="/img/sleep_small.png" width={"60%"} />
 
 ## How does it work?
 
