--- a/docs/wearables/vital-app/introduction.mdx
+++ b/docs/wearables/vital-app/introduction.mdx
@@ -9,7 +9,7 @@ title: "Introduction"
 
 The Vital iOS app allows your customers to quickly sync their Apple Health app with you. This is quite handy if you don't have an iOS app, but you still want to analyse the data stored in the Apple Health app.
 
-<div className="flex flex-row" style="gap: 10px">
+<div className="flex flex-row space-x-1">
   <img src="/img/activity_small.png" width={"50%"} />
   <img src="/img/sleep_small.png" width={"50%"} />
 </div>
