--- a/docs/wearables/vital-app/introduction.mdx
+++ b/docs/wearables/vital-app/introduction.mdx
@@ -9,9 +9,9 @@ title: "Introduction"
 
 The Vital iOS app allows your customers to quickly sync their Apple Health app with you. This is quite handy if you don't have an iOS app, but you still want to analyse the data stored in the Apple Health app.
 
-<div className="flex flex-row" style="column-gap: 10px">
-  <img src="/img/activity_small.png" width={"50%"} />
-  <img src="/img/sleep_small.png" width={"50%"} />
+<div className="flex flex-row justify-between">
+  <img src="/img/activity_small.png" width={"49%"} />
+  <img src="/img/sleep_small.png" width={"49%"} />
 </div>
 
 ## How does it work?
