--- a/docs/wearables/sdks/ios.mdx
+++ b/docs/wearables/sdks/ios.mdx
@@ -527,13 +527,21 @@ If your app already asked for one, or more, of these permissions, we will try to
 
 #### v) Information flow
 
-For most users, the SDK is configured with background delivery to `true`. Data is synced on your behalf and you don't need to think about it. Eventually, to display the information back to an end-user, you make an HTTP request to a server. This means that information flows looks like this:
+For most users, the SDK is configured with background delivery to `true`. Data is synced on your behalf and you don't need to think about it. Eventually, to display the information back to an end-user, you make an HTTP request to a server. The data flow usually looks like this:
 
 ```
-Apple HealthKit -> SDK -> Vital Server -> Your Server <- User's app
+Apple HealthKit -> Vital SDK -> Vital Server -> Your Server <- User's app
 ```
 
-You can bypass the above flow, by using `VitalHealthKit.read(resource:startDate:endDate:)`. This is a static method that doesn't require the SDK to be configured. This is a great option if you are only dealing with Apple HealthKit data. You can still keep background delivery enabled, but read data from Apple HealthKit instead.
+You can bypass the above flow, by using `VitalHealthKit.read(resource:startDate:endDate:)`. This is a static method that doesn't require the SDK to be configured. This is a great option if you are only interested in Apple HealthKit data. You can still keep background delivery enabled, but read data from Apple HealthKit directly. The previous flow will then look like this:
+
+```
+/// Background, handled automatically by the SDK
+Apple HealthKit -> Vital SDK -> Vital Server -> Your Server
+
+/// In the app
+User's app <- Vital SDK  <- Apple HealthKit
+```
 
 <Note>
 
