--- a/docs/wearables/sdks/android.mdx
+++ b/docs/wearables/sdks/android.mdx
@@ -2,16 +2,128 @@
 title: "Android"
 ---
 
-## 1. Intro
+<Tip>
+    Please check our [sample
+    app](https://github.com/tryVital/vital-android/tree/main/app), that makes
+    full use of the SDK.
+</Tip>
 
-The Android SDK is split into two main components: VitalCore, VitalDevices. VitalCore holds common components to for VitalDevices. Among other things, it has the network layer that allows us to send data from a device to a server.
+## 1. Introduction
+
+The Vital SDK is split into three main components: `VitalClient`, `VitalHealthConnect`
+and `VitalDevices`.
+
+- `VitalClient` holds common components to both `VitalHealthConnect` and `VitalDevices`. Among other
+things, it has the network layer that allows us to send data from a device to a server.
+- `VitalHealthConnect` is an abstraction over Health Connect
+- `VitalDevices` is an abstraction over a set of Bluetooth devices.
 
 ## 2. Installation
 
-We use Gradle to manage dependencies. We will soon have the SDK publicly available.
+You can install the Vital SDK by adding the following to your `build.gradle` file:
 
-## 3. Initial Setup
+```groovy
+implementation 'com.github.tryVital.vital-android:VitalClient:$vital_version'
+implementation 'com.github.tryVital.vital-android:VitalHealthConnect:$vital_version'
+implementation 'com.github.tryVital.vital-android:VitalDevices:$vital_version'
+```
 
-To use our SDK, start by setting up `VitalClient`:
+Replace `$vital_version` with the latest version of the SDK. You only need to add the dependencies
+for the components you want to use.
 
-Rest of the docs coming soon... 🚀
+The min version of the SDK is `21` for VitalClient but for VitalHealthConnect and VitalDevices it is
+`26`.
+
+### VitalHealthClient installation
+
+You have no additional steps to take to use VitalHealthClient.
+
+### VitalHealthConnect installation
+
+The sdk compiles on min version `26` but to get data out of the underlying Health Connect SDK you
+need to be on `28` or higher.
+
+### VitalDevices installation
+
+Vital Devices uses bluetooth, and it requires different permissions based on you apps min version.
+Here is an example of a `AndroidManifest.xml` file that uses Vital Devices:
+
+```xml
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN" android:usesPermissionFlags="neverForLocation"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT"/>
+
+    <!-- Request legacy Bluetooth permissions on older devices. -->
+    <uses-permission android:name="android.permission.BLUETOOTH" android:maxSdkVersion="30"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" android:maxSdkVersion="30"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" android:maxSdkVersion="30"/>
+```
+
+## 3. Usage
+
+### 1. VitalClient
+
+First you need to get an instance of `VitalClient`:
+
+```kotlin
+    val client = VitalClient(
+    context = this,
+    region = Region.EU,
+    environment = Environment.Sandbox,
+    apiKey = "sk_eu_S5LdXTS_CAtdFrkX9OYsiVq_jGHaIXtZyBPbBtPkzhA" //your key from the dashboard
+)
+```
+
+Now you can start using the client to send and receive data from the server.
+
+You can read about the available methods in
+the [docs](https://docs.tryvital.io/api-reference/user/create-user).
+
+### 2.  VitalHealthConnect
+
+Coming soon.
+
+### 3. VitalDevices
+
+To interact with Vital Devices sdk you need to get an instance of the `VitalDeviceManager`:
+
+```kotlin
+val deviceManager = VitalDeviceManager.create(this)
+```
+
+Next you have to scan for one of the supported devices. You can find the list of supported devices
+by calling `VitalDeviceManagerBrands.devices`.
+
+You can search now.
+
+```kotlin
+vitalDeviceManager.search(deviceModel).collect { scannedDevice ->
+    // scannedDevice is the device that was found of the type deviceModel
+}
+```
+
+Depending on the type of device you are connecting to, you will have to call different methods to
+connect to it.
+
+#### 1. Blood pressure monitor
+
+```kotlin
+vitalDeviceManager.bloodPressure(context, scannedDevice)
+    .collect { bloodPressureSample ->
+        // bloodPressureSample is the sample that was received from the device
+    }
+```
+
+#### 2. Glucose meter
+
+```kotlin
+vitalDeviceManager.glucoseMeter(context, scannedDevice)
+    .collect { glucoseSample ->
+        // glucoseSample is the sample that was received from the device
+    }
+```
+
+After you have received samples depending on the type of device you might need to star scanning
+again to receive the next set of samples.
+
+
+
