docs: add android and flutter docs

--- a/docs/wearables/sdks/android.mdx
+++ b/docs/wearables/sdks/android.mdx
@@ -69,7 +69,7 @@ First you need to get an instance of `VitalClient`:
     context = this,
     region = Region.EU,
     environment = Environment.Sandbox,
-    apiKey = "sk_eu_S5LdXTS_CAtdFrkX9OYsiVq_jGHaIXtZyBPbBtPkzhA" //your key from the dashboard
+    apiKey = "sk_eu_S5L..." //your key from the dashboard
 )
 ```
 
